src2/objects/Attribute_Action_Item__c.object
<CustomObject>
    <fields>
        <fullName>Action_Item__c</fullName>
        <label>Action Item</label>
        <referenceTo>Action_Item__c</referenceTo>
        <relationshipLabel>Attribute Action Items</relationshipLabel>
        <relationshipName>Attribute_Action_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Attribute_Action_Item_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Attribute Action Item UUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Attribute_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute Definition</label>
        <referenceTo>Attribute_Definition__c</referenceTo>
        <relationshipLabel>Attribute Action Items</relationshipLabel>
        <relationshipName>Attribute_Action_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attribute_Name__c</fullName>
        <formula>Attribute_Definition__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Attribute Action Item</label>
    <nameField>
        <label>Attribute Action Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attribute Action Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>